--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,7 @@
       package="com.example"
       android:versionCode="1"
       android:versionName="1.0">
+    <supports-screens android:xlargeScreens="true"/>
     <application android:label="FpsTest" android:icon="@drawable/icon">
         <activity android:name="FpsTestActivity"
                   android:label="@string/app_name">
